add_library(storage
    file_buffer.cpp
    buffer_manager.cpp
    block_manager.cpp
    standard_buffer_manager.cpp
    single_file_block_manager.cpp
    buffer/buffer_pool.cpp
    buffer/buffer_handle.cpp
    buffer/block_handle.cpp
    buffer/buffer_pool_reservation.cpp
    compat/duckdb_file_system.cpp
)
qlever_target_link_libraries(storage)
