add_subdirectory(ConfigManager)
add_subdirectory(MemorySize)
add_subdirectory(http)
add_library(antlrErrorHandling antlr/ANTLRErrorHandling.cpp antlr/GenerateAntlrExceptionMetadata.cpp StringUtils.cpp ParseException.cpp)
qlever_target_link_libraries(antlrErrorHandling)
add_library(util UnitOfMeasurement.cpp Conversions.cpp Date.cpp DateYearDuration.cpp Duration.cpp  CancellationHandle.cpp LazyJsonParser.cpp BlankNodeManager.cpp)
qlever_target_link_libraries(util PUBLIC antlrErrorHandling s2 pb_util pb_util_geo pb_util_json rdfTypes antlr4_umbrella)
