
add_executable(AlgorithmBackportTests algorithmTest.cpp)
add_executable(DebugJoinView DebugJoinView.cpp)
qlever_target_link_libraries(DebugJoinView)
target_link_libraries(AlgorithmBackportTests GTest::gtest GTest::gmock_main)
gtest_discover_tests(AlgorithmBackportTests AlgorithmBackportTests)
addLinkAndDiscoverTestNoLibs(ConceptsTest)
addLinkAndDiscoverTestNoLibs(ShiftTest)
addLinkAndDiscoverTestNoLibs(ValueIdentityTest)
addLinkAndDiscoverTestNoLibs(BackportIteratorTest)

add_executable(UtilCompilationTests UtilCompilationTests.cpp)
target_link_libraries(UtilCompilationTests GTest::gtest GTest::gmock_main absl::strings)
gtest_discover_tests(UtilCompilationTests AlgorithmBackportTests)
