add_subdirectory(idTable)
addLinkAndDiscoverTest(IndexScanTest)
addLinkAndRunAsSingleTest(CartesianProductJoinTest)
addLinkAndDiscoverTest(TextIndexScanForWordTest)
addLinkAndDiscoverTest(TextIndexScanForEntityTest)
addLinkAndRunAsSingleTest(SpatialJoinTest)
addLinkAndDiscoverTest(DistinctTest)
addLinkAndDiscoverTest(GroupByHashMapOptimizationTest)
addLinkAndDiscoverTest(LazyGroupByTest)
addLinkAndDiscoverTest(CountConnectedSubgraphsTest)
addLinkAndDiscoverTest(BindTest)
addLinkAndRunAsSingleTest(SpatialJoinAlgorithmsTest)
addLinkAndDiscoverTest(SpatialJoinPrefilterTest)
addLinkAndDiscoverTest(SpatialJoinParserTest)
addLinkAndDiscoverTest(SpatialJoinCachedIndexTest)
addLinkAndDiscoverTestSerial(QueryExecutionTreeTest)
addLinkAndDiscoverTestSerial(DescribeTest)
addLinkAndDiscoverTestSerial(ExistsJoinTest)
addLinkAndDiscoverTest(NeutralOptionalTest)
addLinkAndDiscoverTest(OptionalJoinTest)
addLinkAndDiscoverTest(GroupConcatExpressionTest)
addLinkAndDiscoverTest(StripColumnsTest)
addLinkAndDiscoverTestSerial(NamedResultCacheTest)
addLinkAndDiscoverTest(NamedResultCacheSerializerTest)
addLinkAndDiscoverTest(ExplicitIdTableOperationTest)
addLinkAndDiscoverTest(StringMappingTest)
addLinkAndDiscoverTest(PermutationSelectorTest)
