add_subdirectory(idTable)
addLinkAndDiscoverTest(IndexScanTest engine)
addLinkAndRunAsSingleTest(CartesianProductJoinTest engine)
addLinkAndDiscoverTest(TextIndexScanForWordTest engine)
addLinkAndDiscoverTest(TextIndexScanForEntityTest engine)
addLinkAndRunAsSingleTest(SpatialJoinTest engine)
addLinkAndDiscoverTest(DistinctTest engine)
addLinkAndDiscoverTest(GroupByHashMapOptimizationTest)
addLinkAndDiscoverTest(LazyGroupByTest engine)
addLinkAndDiscoverTest(CountConnectedSubgraphsTest)
addLinkAndDiscoverTest(BindTest engine)
addLinkAndRunAsSingleTest(SpatialJoinAlgorithmsTest engine)
addLinkAndDiscoverTest(SpatialJoinPrefilterTest engine)
addLinkAndDiscoverTest(SpatialJoinParserTest engine)
addLinkAndDiscoverTest(SpatialJoinCachedIndexTest engine)
addLinkAndDiscoverTest(QueryExecutionTreeTest engine)
addLinkAndDiscoverTest(DescribeTest engine)
addLinkAndDiscoverTest(ExistsJoinTest engine)
addLinkAndDiscoverTest(NeutralOptionalTest engine)
addLinkAndDiscoverTest(OptionalJoinTest engine)
addLinkAndDiscoverTest(GroupConcatExpressionTest engine)
addLinkAndDiscoverTest(StripColumnsTest engine)
addLinkAndDiscoverTest(NamedResultCacheTest)
addLinkAndDiscoverTest(NamedResultCacheSerializerTest engine)
addLinkAndDiscoverTest(ExplicitIdTableOperationTest)
addLinkAndDiscoverTest(StringMappingTest engine)
addLinkAndDiscoverTest(PermutationSelectorTest engine)
addLinkAndDiscoverTest(ConstructTripleInstantiatorTest)
