add_subdirectory(vocabulary)
addLinkAndDiscoverTest(PatternCreatorTest index)
addLinkAndDiscoverTest(ScanSpecificationTest index)
addLinkAndDiscoverTestNoLibs(KeyOrderTest)
addLinkAndDiscoverTestNoLibs(EncodedIriManagerTest parser)
addLinkAndDiscoverTest(GraphNameManagerTest index)
addLinkAndDiscoverTest(IndexRebuilderTest index server)
addLinkAndDiscoverTest(InputFileSpecificationTest parser index)
addLinkAndDiscoverTest(VocabularyMergerImplTest index)
