add_subdirectory(data)

addLinkAndDiscoverTest(ParallelBufferTest)
addLinkAndDiscoverTest(LiteralOrIriTest)
addLinkAndDiscoverTest(PayloadVariablesTest)
addLinkAndDiscoverTest(QuadTest)
addLinkAndDiscoverTest(BlankNodeExpressionTest)
addLinkAndDiscoverTest(PropertyPathTest)
addLinkAndDiscoverTest(UpdateTriplesTest)
addLinkAndDiscoverTest(NamedCachedResultTest)
addLinkAndDiscoverTestSerial(SparqlAntlrParserTest)
addLinkAndDiscoverTestSerial(SparqlAntlrParserUpdateTest)
addLinkAndDiscoverTestSerial(SparqlAntlrParserExpressionTest)

