add_subdirectory(data)

addLinkAndDiscoverTest(AsyncBlockSourceTest parser)
addLinkAndDiscoverTest(LiteralOrIriTest engine)
addLinkAndDiscoverTest(PayloadVariablesTest engine)
addLinkAndDiscoverTest(QuadTest engine)
addLinkAndDiscoverTest(BlankNodeExpressionTest engine)
addLinkAndDiscoverTest(PropertyPathTest parser)
addLinkAndDiscoverTest(UpdateTriplesTest parser)
addLinkAndDiscoverTest(NamedCachedResultTest parser)
addLinkAndDiscoverTest(GraphPatternOperationTest parser)
addLinkAndDiscoverTest(GraphPatternAnalysisTest parser)
addLinkAndDiscoverTest(SparqlAntlrParserTest parser engine)
addLinkAndDiscoverTest(SparqlAntlrParserUpdateTest parser engine)
addLinkAndDiscoverTest(SparqlAntlrParserExpressionTest parser sparqlExpressions engine)

